# bittle_msgs

./: CMakeLists.txt  package.xml  requirements.txt
action/: MoveToGrid.action
msg/: AprilTag.msg  Command.msg  CommandBuffer.msg  CommandList.msg  Detection.msg  Point.msg  State.msg  Yolo.msg
srv/: ExecuteCommand.srv  SerialCommand.srv
